src/view/bulletins/snapshots/nifi_lens__view__bulletins__modal__tests__modal_search_highlights_current_is_1.snap
---
source: src/view/bulletins/modal.rs
assertion_line: 419
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 20 },
    content: [
        "┌ ERROR · S ───────────────────────────────────────────────┐",
        "│at 10:14:22                                               │",
        "│                                                          │",
        "│src-id  s   pg-id  g                                      │",
        "│connection refused                                        │",
        "│retry connection                                          │",
        "│connection closed                                         │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│/ connection (2/3)                                        │",
        "│                                                          │",
        "│[Esc] close · [/] find · [n] next · [N] prev · [c] copy   │",
        "└──────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 11, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | UNDERLINED | REVERSED,
        x: 17, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 11, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Red, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
